Can't use "from dupli" method on particles with object type of visualization, then scene linked to other. #35412

Closed
opened 2013-05-17 19:33:56 +02:00 by Michael Soluyanov · 4 comments

%%%--- Operating System, Graphics card ---
Ubuntu 12.10 GeForce GTX 260

- Blender version with error, and version that worked ---

tested on official build 2.67 and r56534

- Short description of error ---

Can't use "from dupli" method on particles with object type of visualization, then scene linked to other.
I think, it because texture coordinates lost.
In images you can see

  1. cubes in original file - colored by gradient, using uv-layer of sphere.
    cubes in new file, linked from first scene - solid gray, no UV-layer (if texture is lost they must have diffuse color).

    • Steps for others to reproduce the error (preferably based on attached .blend file) ---

I create a simple scene to reproduce the error. cubes duplicates on sphere, by particles. Gradient texture set color of cubes, using "from dupli". This objects are grouped in lib.blend and linked to test.blend

  1. open lib.blend and render - You will see, that cubes have different colors
  2. open test.blend and render - now all cubes sold

PS Sorry, if my English is so bad! %%%

%%%--- Operating System, Graphics card --- Ubuntu 12.10 GeForce GTX 260 - Blender version with error, and version that worked --- tested on official build 2.67 and r56534 - Short description of error --- Can't use "from dupli" method on particles with object type of visualization, then scene linked to other. I think, it because texture coordinates lost. In images you can see 1. cubes in original file - colored by gradient, using uv-layer of sphere. cubes in new file, linked from first scene - solid gray, no UV-layer (if texture is lost they must have diffuse color). - Steps for others to reproduce the error (preferably based on attached .blend file) --- I create a simple scene to reproduce the error. cubes duplicates on sphere, by particles. Gradient texture set color of cubes, using "from dupli". This objects are grouped in lib.blend and linked to test.blend 1) open lib.blend and render - You will see, that cubes have different colors 2) open test.blend and render - now all cubes sold PS Sorry, if my English is so bad! %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Confirmed - the feature "Inherit texture coordinates from duplicator parent" is not working.
%%%

%%%Confirmed - the feature "Inherit texture coordinates from duplicator parent" is not working. %%%

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35412
No description provided.