Fix #35412: blender internal "from dupli" texture coordinates not working with particles in linked groups.